# Android-NCNN-YoloFace

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jiwon/androidncnnyoloface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ncnn-yolo-face.cpp  ncnn-yolo-face.h
app/src/main/java/com/jiwon/androidncnnyoloface/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jiwon/androidncnnyoloface/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
